build/deployment/cluster/monitoring/simplified/promgrafana/prometheusgrafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus-grafana
  name: prometheus-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-grafana
  strategy: {}
  template:
    metadata:
      labels:
        app: prometheus-grafana
    spec:
      containers:
      - image: prom/prometheus:main
        name: sre-basic-app-prometheus
        resources:
          requests:
            memory: "2Gi"
            cpu: "2000m"
          limits:
            memory: "4Gi"
            cpu: "4000m"
      - image: grafana/grafana-oss:main
        name: sre-basic-app-grafana
        resources:
          requests:
            memory: "2Gi"
            cpu: "2000m"
          limits:
            memory: "4Gi"
            cpu: "4000m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-grafana
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-grafana.local
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-grafana
  name: prometheus
spec:
  ports:
  - port: 9090
    name: prometheus
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus-grafana
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-grafana
  name: grafana
spec:
  ports:
  - port: 3000
    name: grafana
    protocol: TCP
    targetPort: 3000
  selector:
    app: prometheus-grafana
  type: ClusterIP
